--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>點擊張乃介</title>
-    <meta itemprop="name" content="點擊張乃介" />
-    <meta itemprop="description" content="新概念Ho遊戲遊戲" />
+    <title>點擊李育有</title>
+    <meta itemprop="name" content="點擊李育有" />
+    <meta itemprop="description" content="新概念Homo遊戲" />
     <meta itemprop="image" content="https://www.thac.cc/kano/res/logo.jpg" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
@@ -34,7 +34,7 @@
                 <div style="font-size:2.6em; color:#FEF002;">新概念Homo游戏</div><br />
                 <div style="font-size:2.2em; color:#fff; line-height:1.5em;">
                     從最底下開始<br />
-                    看看你20秒能點多少張乃介<br />
+                    看看你20秒能點多少李育有<br />
                 </div>
                 <br />
                 <div id="btn_group" style="display: block;">
